# rsi_bot

./: .env  .flake8  .gitignore  Dockerfile  LICENSE  README.md  lint.sh  main.py  makefile  pyproject.toml  requirements.txt  run.sh  setup.cfg
bot/: __init__.py  __main__.py  bybit_kline_data_fetcher.py  common.py  discord_bot.py  main.py  oauth2_tokens.py  read_price_helper.py  rsi_counter.py
tests/: test_bybit_cline_data.py
